# MovieBot

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_admin_field.py  003_removed_movie_name.py  004_add_message_id.py  005_removed_field_code.py  006_nullable_message_id.py
app/: config.py  main.py  messages.py  utils.py
app/database/: db_config.py  models.py  services.py
app/keyboards/: admin_keyboard.py  user_keyboard.py
app/routers/: admin_router.py  movie_channel_router.py  user_router.py
app/routers/helpers/: general.py
app/utils/: deepseek.py  utils.py
